--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.2.0",
+    "optional-js": "^2.0.0",
+    "three": "^0.93.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.2.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
