--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "events": "^3.0.0",
     "firebase": "^5.2.0",
     "optional-js": "^2.0.0",
-    "three": "^0.93.0",
     "register-service-worker": "^1.5.2",
+    "three": "^0.93.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.1",
