--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "events": "^3.0.0",
     "firebase": "^5.2.0",
+    "nipplejs": "^0.8.0",
     "optional-js": "^2.0.0",
     "register-service-worker": "^1.5.2",
     "three": "^0.93.0",
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
-    "@vue/cli-plugin-pwa": "^3.0.1",
+    "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
