--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
   },
   "dependencies": {
     "events": "^3.0.0",
-    "firebase": "^5.2.0",
-    "nipplejs": "^0.8.0",
+    "file-saver": "^2.0.1",
+    "firebase": "^5.9.0",
+    "nipplejs": "^0.8.1",
     "optional-js": "^2.0.0",
-    "register-service-worker": "^1.5.2",
+    "register-service-worker": "^1.6.2",
     "three": "^0.93.0",
-    "vue": "^2.5.17",
+    "vue": "^2.6.9",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.2.1",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.5.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.1",
-    "@vue/cli-plugin-eslint": "^3.0.1",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-service": "^3.0.1",
+    "@vue/cli-plugin-babel": "^3.5.1",
+    "@vue/cli-plugin-eslint": "^3.5.1",
+    "@vue/cli-plugin-pwa": "^3.5.1",
+    "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "node-sass": "^4.9.0",
+    "eslint": "^5.15.2",
+    "eslint-plugin-vue": "^5.2.2",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.9"
   }
 }
