--- a/package.json
+++ b/package.json
@@ -8,29 +8,34 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.5.95",
     "events": "^3.0.0",
     "file-saver": "^2.0.1",
     "firebase": "^5.9.0",
     "nipplejs": "^0.8.1",
     "optional-js": "^2.0.0",
     "register-service-worker": "^1.6.2",
+    "roboto-fontface": "^0.10.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "three": "^0.93.0",
     "vue": "^2.6.9",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.5.6",
+    "vue-slider-component": "^3.0.21",
+    "vuetify": "^1.5.7",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@vue/cli-service": "^3.5.3",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.2",
     "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.11.0",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.9"
   }
 }
