--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@doodle3d/threejs-export-stl": "0.0.5",
     "events": "^3.0.0",
     "file-saver": "^2.0.1",
     "firebase": "^5.9.0",
     "nipplejs": "^0.8.1",
     "optional-js": "^2.0.0",
     "register-service-worker": "^1.6.2",
-    "three": "^0.93.0",
+    "three": "^0.103.0",
     "vue": "^2.6.9",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.6",
@@ -24,7 +25,7 @@
     "@vue/cli-plugin-babel": "^3.5.1",
     "@vue/cli-plugin-eslint": "^3.5.1",
     "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@vue/cli-service": "^3.5.3",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.2",
