--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.9",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^3.0.21",
+    "vue2-hammer": "^2.1.2",
     "vuetify": "^1.5.7",
     "vuex": "^3.1.0"
   },
